fix - Fixing an sufficient contrast ratio in testimonialCard component

--- a/src/components/testimonialCard/style.css
+++ b/src/components/testimonialCard/style.css
@@ -3,7 +3,7 @@
   min-width: min(18rem, 100%);
   margin: 2rem;
   padding: 5rem 3rem 3rem;
-  border: 0.5rem solid var(--light-blue-100);
+  border: 4px solid var(--light-blue-100);
   border-radius: var(--border-rs);
   background: var(--page-bg);
 }
@@ -30,11 +30,6 @@
   right: -4rem;
 }
 
-/* .testimonial-card__quote--bottom {
-  bottom: -18rem;
-  right: -4rem;
-} */
-
 .testimonial-card__content {
   font-size: clamp(1.5rem, 2vw, 2rem);
   line-height: 1.4;
@@ -49,7 +44,6 @@
   align-items: center;
   justify-self: center;
   gap: 2rem;
-
 }
 
 .testimonial-card__avatar {
@@ -57,7 +51,7 @@
   height: 8rem;
   border-radius: 50%;
   object-fit: cover;
-  border: 0.2rem solid var(--light-blue-100);
+  border: 2px solid var(--light-blue-100);
   background: var(--light-blue-100);
 }
 
@@ -71,7 +65,6 @@
 .testimonial-card__profession {
   font-size: 1.4rem;
   color: var(--light-blue-100);
-  opacity: 0.8;
 }
 
 @media screen and (max-width: 1024px) {
